Fixed minor alignment issue with project card hover covering the title on the container

--- a/css/projectpage_custom.scss
+++ b/css/projectpage_custom.scss
@@ -100,7 +100,7 @@
   & > h2 {
     font-size: 2em;
     text-align: center;
-    margin-bottom: 3%;
+    margin-bottom: 35px;
   }
 }
 
